public/modules/core/css/core.css
.content {
	margin-top: 90px;
	margin-bottom: 50px;
}
.undecorated-link:hover {
	text-decoration: none;
}
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
	display: none !important;
}
.ng-invalid.ng-dirty{
    border-color:#0000FF;
}
.ng-valid.ng-dirty{
    border-color:#FF9900;
}

.mode-button {
	display: block;
	width: 25%;
	height: 34px;
	padding: 6px 12px;
	font-size: 14px;
	line-height: 1.428571429;
	color: #555;
	vertical-align: middle;
	background-color: #fff;
	background-image: none;
	border: 2px groove #ccc;
	border-radius: 4px;
	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
	-webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
}

.codeMirrorSection{
	border: 1px solid black;
	padding: 2px;
	margin-left:10px;
	max-width:700px;
	height: auto;
}

